// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadMatchedPartType it renders 1`] = `
<div
  className="rounded-auto"
  key="match10"
>
  find me
  <Icon
    as="i"
    key="matchDelete$10"
    name="delete"
    onClick={[Function]}
  />
</div>
`;

exports[`UploadMatchedPartType it renders red when not first match 1`] = `
<div
  className="rounded-auto red"
  key="match111"
>
  find me
  <Icon
    as="i"
    key="matchDelete$111"
    name="delete"
    onClick={[Function]}
  />
</div>
`;
